@@ -1,5 +1,5 @@
 .pc
-.TH "ME TV" 1 "2009-06-01" "0.9.1~beta1" "Me TV Manual"
+.TH "ME TV" 1 "2009-06-02" "0.9.1~beta1" "Me TV Manual"
 
 .SH NAME
 me-tv \- a digital television (DVB) viewer for GNOME
