@@ -1,8 +1,10 @@
-2009-06-01  Michael Lamothe <michael.lamothe@gmail.com>
+2009-06-02  Michael Lamothe <michael.lamothe@gmail.com>
 
 	* 0.9.1
 	* Fix to stop EPG update crashing the application after faulty save (LP: #72872)
 	* Fixed spin buttons from GtkBuilder conversion (LP: #382197)
+	* Fixed ComboBoxs in preferences dialog
+	* Application can now start without a device.
 
 2009-05-24  Michael Lamothe <michael.lamothe@gmail.com>
 
